cmake_minimum_required(VERSION 3.10)
project(MSH_2)
set(CMAKE_CXX_STANDARD 98)
include_directories(include)
file(GLOB SOURCES "src/*.cpp")
add_executable(MSH_App ${SOURCES} "include/DeviceManager.h" "src/DeviceManager.cpp" "include/Logger.h" "src/Logger.cpp" "include/NotificationService.h" "src/NotificationService.cpp" )
